# st_data_pars

./: .gitignore  CMakeLists.txt  main.cpp
data/: coder.py
encoding/: encoding_converter.cpp  encoding_converter.h
parser/: Universal_parser.cpp  Universal_parser.h
ui/: mainwindow.cpp  mainwindow.h
validation/: Data_validator.cpp  Data_validator.h
